--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-android:width="108dp"
-android:height="108dp"
-android:viewportWidth="108"
-android:viewportHeight="108">
-
-<!-- Change fillColor to the desired color (#181d2f) -->
-<path
-    android:fillColor="#181d2f"
-    android:pathData="M0,0h108v108h-108z" />
+<vector
+    android:height="108dp"
+    android:width="108dp"
+    android:viewportHeight="108"
+    android:viewportWidth="108"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 </vector>
