--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,12 +20,24 @@
         android:clickable="true"
         android:src="@drawable/baseline_settings_24" />
 
+
+    <ImageView
+        android:id="@+id/ic_logo"
+        android:layout_width="356dp"
+        android:layout_height="75dp"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentEnd="false"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        android:src="@drawable/ic_launcher_foreground" />
+
     <TextView
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Digital Bank Login"
+        android:text="Digital Banking at it's Best"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
         android:gravity="center_horizontal"/>
