--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -18,7 +18,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:clickable="true"
-        android:src="@drawable/baseline_settings_24" />
+        android:src="@drawable/baseline_settings_24"
+        android:contentDescription="Settings Cog Icon" />
 
 
     <ImageView
@@ -28,9 +29,9 @@
         android:layout_alignParentTop="false"
         android:layout_alignParentEnd="false"
         android:layout_marginTop="6dp"
-
         android:gravity="center_horizontal"
-        android:src="@drawable/ic_launcher_foreground" />
+        android:src="@drawable/ic_launcher_foreground"
+        android:contentDescription="DB Logo"  />
 
     <TextView
         android:layout_width="match_parent"
@@ -39,6 +40,7 @@
         android:layout_marginBottom="20dp"
         android:gravity="center_horizontal"
         android:text="Digital Banking at it's Best"
+        android:contentDescription="Digital Banking at it's Best"
         android:textColor="@color/colorPrimary"
         android:textSize="22sp" />
 
@@ -48,7 +50,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:hint="Enter User Name"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"
+        android:contentDescription="Enter Email Address" />
 
     <EditText
         android:id="@+id/passwordInput"
@@ -56,7 +59,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:hint="Enter Password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:contentDescription="Enter Password" />
 
     <Button
         android:id="@+id/loginBtn"
@@ -67,7 +71,8 @@
         android:background="@color/colorPrimary"
         android:text="L o g i n"
         android:textColor="#fff"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:contentDescription="Login Button" />
 
     <TextView
         android:id="@+id/registerTV"
@@ -76,7 +81,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="30dp"
         android:gravity="center_horizontal"
-        android:text="Don't have account? Sign Up Here?" />
+        android:text="Don't have account? Sign Up Here?"
+        android:contentDescription="Click here to Register new account" />
 
     <FrameLayout
         android:layout_width="75dp"
